# distributed-process-platform

./: distributed-process-platform.cabal
src/Control/Distributed/Platform/: GenProcess.hs  GenServer.hs  Timer.hs
src/Control/Distributed/Platform/Internal/: Types.hs
tests/: TestTimer.hs
